# frappe-vcs-group

./: .editorconfig  README.md  pyproject.toml  sync.py
.github/workflows/: ci.yml
vcs_group/: hooks.py  modules.txt
vcs_group/vcs_group/doctype/supplier_manangement/: supplier_manangement.js  supplier_manangement.json  supplier_manangement.py  test_supplier_manangement.py
